// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ZipCodeField/> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-fubCfw clDFWv"
    id="testForm"
  >
    <div
      class="sc-iqHYGH jWqqni"
    >
      <label
        for="text_zip"
      >
        Kod pocztowy
      </label>
      <div
        class="sc-iJuUWI cFUPqY"
      >
        <input
          class="sc-fodVxV gZGAuo"
          id="testId"
          label="Kod pocztowy"
          name="text_zip"
          placeholder="Kod pocztowy"
          value="50600"
        />
      </div>
      <span
        class="sc-hBEYos kIOtFs"
      >
        Podane dane są nieprawidłowe
      </span>
    </div>
    <button
      class="sc-iBPRYJ hcYpVh"
      disabled=""
      type="submit"
    >
      Wyślij
    </button>
  </form>
</div>
`;

exports[`<ZipCodeField/> matches snapshot 1`] = `
<input
  class="sc-fodVxV kubVCF"
  id="testId"
  label="Kod pocztowy"
  name="text_zip"
  placeholder="Kod pocztowy"
  value=""
/>
`;

exports[`<ZipCodeField/> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-fubCfw clDFWv"
    id="testForm"
  >
    <div
      class="sc-iqHYGH jWqqni"
    >
      <label
        for="text_zip"
      >
        Zip Code*
      </label>
      <div
        class="sc-iJuUWI cFUPqY"
      >
        <input
          class="sc-fodVxV gZGAuo"
          id="testId"
          label="Zip Code"
          name="text_zip"
          placeholder="Kod pocztowy*"
          required=""
          value=""
        />
      </div>
      <span
        class="sc-hBEYos kIOtFs"
      >
        To pole jest wymagane
      </span>
    </div>
    <button
      class="sc-iBPRYJ hcYpVh"
      disabled=""
      type="submit"
    >
      Wyślij
    </button>
  </form>
</div>
`;

exports[`<ZipCodeField/> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fubCfw clDFWv"
    id="testForm"
  >
    <div
      class="sc-iqHYGH jWqqni"
    >
      <label
        for="text_zip"
      >
        ZipCode
      </label>
      <div
        class="sc-iJuUWI cFUPqY"
      >
        <input
          class="sc-fodVxV kubVCF"
          id="testId"
          label="ZipCode"
          name="text_zip"
          placeholder="Kod pocztowy"
          value=""
        />
      </div>
    </div>
    <button
      class="sc-iBPRYJ hcYpVh"
      type="submit"
    >
      Wyślij
    </button>
  </form>
</div>
`;
